app/assets/stylesheets/application.css.scss
/*

text-align: right;
 * This is a manifest file that'll automatically include all the stylesheets available in this directory
 * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
 * the top of the compiled file, but it's generally better to create a new file per style scope.
 *= require_self
 *= require welcome
 *= require screen
 *= require facebox
 *= require jquery.notifyBar
*/

$blueprint-grid-columns: 32;
$blueprint-grid-width: 20px;
$blueprint-grid-margin: 10px;

@import "blueprint/reset";
@import "blueprint";

@import "compass/css3";

@import url(http://fonts.googleapis.com/css?family=PT+Sans:400,700);

$sidebar-columns: 4;

  
html {
  overflow: -moz-scrollbars-vertical; 
  overflow-y: scroll;
}

body.common {
  .red, .error_notification {
    color: red;
  }

  th {
    font-weight: bold;
  }

  th, td {
    padding: 2px 10px;
  }

  font: {
    family: 'PT Sans', sans-serif;
    size: 12px;
  }

  a {
    color: #1d648d;
  }

  a:hover{
    font-weight: bold;
  }

  color: #726e6b;

  ul {
    margin-bottom: 10px;
  }

  li {
    list-style: square inside;
  }


  @include blueprint-debug;
  background: #f9f5e9;

  h2 { 
    font-size: 16px;
    @include prepend(1);
  }
  h3 { font-size: 14px; }

  h2, h3 {
    font-weight: bold;
    color: #826d5d;

    padding: {
      top: 26px;
      bottom: 20px;
    }
  }

  // h3 {
    // font-size: 12px;
    // font-weight: bold;
    // color: #826d5d;

    // padding: {
      // top:20px;
      // bottom: 15px;
    // }
  // }

  h1 {
    font-size: 18px;
    font-weight: bold;
    color: #834741;

    padding: {
      top:25px;
      bottom: 10px;
    }

    @include prepend(1);
  }

  .simple_form div.input {
    margin-bottom: 10px;
  }

  .simple_form label {
    float: left;
    width: 130px;
    text-align: right;
    margin: 2px 10px;
  }

  .simple_form input {
    &.text,
    &.title,
    &[type=email],
    &[type=text],
    &[type=password] {
      width: 200px;
    }
  }

  div.boolean, .simple_form input[type='submit'] {
    margin-left: 150px;
  }

  div.boolean label, label.collection_radio {
    float: none;
    margin: 0;
  }

  label.collection_radio {
    margin-right: 10px;
    vertical-align: -2px;
    margin-left:   2px;
  }

  .field_with_errors {
    background-color: #ffcaca;
    margin: {
      left: 20px;
      right: 20px;
    }
  }

  .simple_form .error {
    clear:   left;
    color:   black;
    display: block;
    margin: {
      top: 5px;
      left: 150px;
    }
    font-size:    12px;
    font-weight: bold;
  }

  .simple_form .hint {
    clear: left;
    margin-left: 150px;
    font-size:    12px;
    color: #555;
    display: block;
    font-style: italic;
  }

  input.radio {
    margin-right: 5px;
    vertical-align: -3px;
  }

  input.check_boxes {
    margin-left: 3px;
    vertical-align: -3px;
  }

  label.collection_check_boxes {
    float: none;
    margin: 0;
    vertical-align: -2px;
    margin-left:   2px;
  }

  .form {

    h1, h2, .links {
      @include prepend(5);
    }

    .warning {
      display: none;
      border: 2px solid #ff3333;
      background: #ffcaca;
      color: #000;
      padding: 5px;
      margin-top: 10px;
      margin-right: 20px;
      font-size: 11px;
    }

    .note, .warning {
      margin: {
        left: 150px;
        bottom: 15px;
      }
    }

    .links {
      padding: {
        top: 20px;
        bottom: 20px;
      }
    }
  }

}

body.application {
  #container {
    width: $blueprint-container-size;
    margin: 0 auto;
    @include pie-clearfix;
  }

  #header {
    @include column($blueprint-grid-columns);
  }

  #footer {
    @include prepend(8);
    @include column(24, true);
    margin: {
      top: 20px;
      bottom: 20px;
    }
  }

  #sidebar {
    @include column(6); 

    #menu {
      ul {
        position: relative;
        width: 183px;
        z-index: 3000;

        left: 0;
        top: 20px;

        li {
          padding: 8px 0 8px 10px;
          @include border-radius(5px 0 0 5px);
          list-style: none;
        }

        li.selected { 
          behavior: url(/css-ie/PIE.htc);
          background: #fff;
          @include box-shadow(-3px 0 2px #A3A3A3);
        }
      }
    }
  }

  #content {
    // background: #ff0000;
    @include column(24, true); 
    @include prepend(1); 
    @include append(1); 

    background: #fff;

    @include border-radius;
    @include single-box-shadow(#a3a3a3, 0,0, 2px);
    behavior: url(/css-ie/PIE.htc);

    padding: {
      bottom: 40px;
    }
  }

  #header {
    margin-top: 20px;
    #logo {
      @include column(6);
    }

    #stuff{
      @include prepend(2);
      @include column(10);
    }

    #account_links {
      @include column(13, true);
      @include append(1);
      text-align: right;

      .user_name {
        font-weight: bold;
        color: #826d5d;
      }

      .separator {
        padding: {
          left: 10px;
          right: 10px;
        }
      }

      .sign_out {
        margin-left: 20px;
      }
    }
  }
}

body.application {

  .blank {
    background: url('/assets/blank.png') 30px 25px no-repeat;
    height: 550px;

    position: relative;
  }

  a.upload {
    display: block;
    width: 121px;
    height: 29px;
    background: url('/assets/upload-button.png');
  }
  a.upload:hover {
    background: url('/assets/upload-button-active.png');
  }


  ul.facebox {
    margin-left: 170px;
  }


  #facebox .content {
    width: 450px;
  }

  #books {

    .books {


      .book {
        @include column(25, true);
        font-size: 11px;
        padding-bottom: 20px;

        h2 {
          @include prepend(0);
          padding: {
            bottom: 10px;
            top: 0px;
          }
        }

        .title {
          @include prepend(1);
          @include column(24, true);
        }

        .total {
          margin-top: 10px;
          padding-top: 10px;
          width: 100px;
        }

        .months {
          h3 { 
            @include prepend(1);
          }

          @include column(18);

          background: #f9f5ea;
          padding-bottom: 20px;
          position: relative;

          .month {
            h3 { padding-left: 0; }
            position: absolute;
            top: 0;
            right: 0;
            width: 180px;
            height: 100%;
            background: #e5ddc6;
            padding-left: 20px;

            .total {
              border-top: 1px dotted #a8a291;
            }
          }

          .month.last_six { background: #e5ddc6; h3 { color: #826d5d; } }
          .month { background: #d4e9ec; h3 { color: #118793; } }
        }

        .totals {
          @include prepend(1);
          @include column(6, true);

          .total {
            border-top: 1px dotted #e3e2e1;
          }
        }

      }
    }
  }

  .barchart {
    width: 280px;
    font-size: 11px;

    @include clearfix;

    @include prepend(1);

    .line {
      margin-right: 1px;
      width: 37px;
      float: left;

      .column {
        width: 37px;
        text-align: center;
      }

      .data { background: #90c7ce }
      .blue { background: #118793 }
      .selected { background: #118793 }
    }
  }
}

body#admins__dashboard {
  .users, .books {
    @include prepend(1);
  }

  table {
    width: 100%;
  }
  table th, table td {
    padding: 5px;
  }

  table th {
    background: #F9F5E9;
  }

  table td {
    border-bottom: 1px solid #F9F5E9;
  }
}

body.application {

  #dashboard, #vendors {
    .period_totals, .totals {
      @include prepend(1);
      text-align: right;
    }
  }

  #upload {
    display: none;
  }

  .royalties {
    padding-right: 20px;
  }

  .number {
    color: #000;
    font-size: 140%;
    font-weight: bold;
  }

  #book_list {
    position: absolute;
    z-index: 10000;
    overflow: visible;
    top: 65px;

    .navigation {
      position: absolute;
      top: 5px;
      left: -180px;
      width: 160px;

      ul {
        maring-left: 0;
        padding: 0;

        li {
          padding: 0 0 10px 0;
          margin: 0;
          list-style: none;
        }
      }
    }
  }


}

body#devise {
  #container {
    @include container;
    // @include showgrid;
  }
  #header, #footer {
    @include prepend(10);
    @include column(22, true);
    padding: {
      top: 20px;
      bottom: 20px;
    }
  }

  #content {
    @include column(14, true);
    @include prepend(9);
    @include append(9);
  }


  #box {
    background: #fff;
    @include border-radius;

    h2, .links {
      @include prepend(5);
    }

    .links {
      padding: {
        top: 20px;
        bottom: 20px;
      }
    }

  }
}

